# adventofcode

./: Pipfile
2021/: day_1.py
2022/: day_1.py  day_10.py  day_10_2.py  day_11.py  day_11_2.py  day_12.py  day_12_2.py  day_13.py  day_13_2.py  day_14.py  day_14_2.py  day_15.py  day_15_2.py  day_15_bis.py  day_16.py  day_16_2.py  day_17.py  day_17_2.py  day_18.py  day_18_2.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  day_2_2.py  day_3.py  day_4.py  day_4_2.py  day_5.py  day_5_2.py  day_6.py  day_6_2.py  day_7.py  day_7_2.py  day_8.py  day_8_2.py  (+2 more)
2023/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_17_2.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_21_2.py  day_22.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_5_2.py  day_6.py  day_7.py  day_7_2.py  day_8.py  day_9.py  input_day20_test2  pyproject.toml  test_21  test_21_2  utils.py
2024/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_15_2.py  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  input_day14.py  input_day15_test4
2025/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
2025/input/: input_day12_test  input_day5_test2  input_day9_test
