[tool.poetry]
name = "adventcode-2023"
version = "0.1.0"
description = ""
authors = ["Gauzere Benoit <benoit.gauzere@insa-rouen.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
ipdb = "^0.13.13"
np = "^1.0.2"
networkx = "^3.2.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
